--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 						<input type="button" id="initiateRun" value="Run">
 					</div>
 					<div class="col-2">
-						<a href="home.php">Back</a>
+						<a href="">Back</a>
 					</div>
 				</div>
 			</div>
